--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,6 @@ dependencies = [
     "openai>=2.15.0",
     "sdk>=1.0.0",
     "openai-agents>=0.6.9",
+    "streamlit>=1.53.0",
+    "langchain-openai>=1.1.7",
 ]
